--- a/egov/egov-egf/src/main/resources/reports/templates/bankAdviceReport1.jrxml
+++ b/egov/egov-egf/src/main/resources/reports/templates/bankAdviceReport1.jrxml
@@ -2,7 +2,7 @@
 <jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="bankAdviceReport" pageWidth="595" pageHeight="842" columnWidth="505" leftMargin="72" rightMargin="18" topMargin="18" bottomMargin="18" isFloatColumnFooter="true" uuid="e977129d-8063-4dc8-acc3-8e8fecf2dd1e">
 	<property name="ireport.zoom" value="1.366026910730141"/>
 	<property name="ireport.x" value="0"/>
-	<property name="ireport.y" value="0"/>
+	<property name="ireport.y" value="144"/>
 	<style name="table">
 		<box>
 			<pen lineWidth="1.0" lineColor="#000000"/>
@@ -63,6 +63,26 @@
 			<pen lineWidth="0.5" lineColor="#000000"/>
 		</box>
 	</style>
+	<style name="table 3">
+		<box>
+			<pen lineWidth="1.0" lineColor="#000000"/>
+		</box>
+	</style>
+	<style name="table 3_TH" mode="Opaque" backcolor="#F0F8FF">
+		<box>
+			<pen lineWidth="0.5" lineColor="#000000"/>
+		</box>
+	</style>
+	<style name="table 3_CH" mode="Opaque" backcolor="#BFE1FF">
+		<box>
+			<pen lineWidth="0.5" lineColor="#000000"/>
+		</box>
+	</style>
+	<style name="table 3_TD" mode="Opaque" backcolor="#FFFFFF">
+		<box>
+			<pen lineWidth="0.5" lineColor="#000000"/>
+		</box>
+	</style>
 	<subDataset name="Table Dataset 1" uuid="8e076bb7-fa96-491a-808c-acec7e8cd8bf">
 		<field name="partyName" class="java.lang.String"/>
 		<field name="accountNumber" class="java.lang.String"/>
@@ -83,6 +103,7 @@
 			<variableExpression><![CDATA[$F{amount}]]></variableExpression>
 		</variable>
 	</subDataset>
+	<subDataset name="Table Dataset 2" uuid="6991f24a-1b84-4a46-9533-3edde91712e2"/>
 	<parameter name="bankName" class="java.lang.String"/>
 	<parameter name="branchName" class="java.lang.String"/>
 	<parameter name="accountNumber" class="java.lang.String"/>
@@ -101,7 +122,7 @@
 	<field name="ifscCode" class="java.lang.String"/>
 	<field name="bank" class="java.lang.String"/>
 	<title>
-		<band height="531">
+		<band height="403">
 			<staticText>
 				<reportElement x="0" y="16" width="198" height="32" uuid="5fadac95-5bd1-4189-9b19-b241adf70f50"/>
 				<textElement>
@@ -130,7 +151,7 @@ The Manager,
 				<text><![CDATA[Dated:]]></text>
 			</staticText>
 			<textField isStretchWithOverflow="true" isBlankWhenNull="true">
-				<reportElement stretchType="RelativeToTallestObject" x="0" y="150" width="505" height="29" uuid="c6427eb5-71f3-426b-bfc4-65ad65c9e907"/>
+				<reportElement stretchType="RelativeToTallestObject" x="0" y="150" width="505" height="28" uuid="c6427eb5-71f3-426b-bfc4-65ad65c9e907"/>
 				<textElement textAlignment="Justified" verticalAlignment="Middle"/>
 				<textFieldExpression><![CDATA[$P{letterContext}]]></textFieldExpression>
 			</textField>
@@ -436,17 +457,19 @@ The Manager,
 					</jr:column>
 				</jr:table>
 			</componentElement>
+		</band>
+	</title>
+	<pageFooter>
+		<band height="275" splitType="Stretch">
 			<staticText>
-				<reportElement positionType="Float" x="1" y="306" width="106" height="59" uuid="8be49221-9ee1-4ff7-b37e-eb3216f27486"/>
-				<textElement textAlignment="Left" verticalAlignment="Bottom">
-					<font size="9" isBold="false" isStrikeThrough="false" pdfFontName="Helvetica-Bold" isPdfEmbedded="true"/>
+				<reportElement x="409" y="251" width="96" height="24" uuid="dc2f7c0c-498e-4b75-9053-ecd7f7540f16"/>
+				<textElement textAlignment="Right" verticalAlignment="Bottom" markup="none">
+					<font size="9"/>
 				</textElement>
-				<text><![CDATA[Chief Accounts Officer,
-Municipal Corporation,
-Chandigarh]]></text>
+				<text><![CDATA[2]]></text>
 			</staticText>
 			<staticText>
-				<reportElement positionType="Float" x="386" y="306" width="119" height="59" uuid="93195cee-1a0a-4554-920d-e72f4d15a537"/>
+				<reportElement x="386" y="2" width="119" height="59" uuid="d65cb76f-88c9-4173-bc88-068793f80c2e"/>
 				<textElement textAlignment="Left" verticalAlignment="Bottom">
 					<font size="9" isBold="false" isStrikeThrough="false" pdfFontName="Helvetica-Bold" isPdfEmbedded="true"/>
 				</textElement>
@@ -455,12 +478,51 @@ Municipal Corporation,
 Chandigarh]]></text>
 			</staticText>
 			<staticText>
-				<reportElement positionType="FixRelativeToBottom" x="409" y="463" width="96" height="24" uuid="8341788f-b2fb-4cd2-b039-c7729e989f20"/>
-				<textElement textAlignment="Right" verticalAlignment="Bottom" markup="none">
-					<font size="9"/>
+				<reportElement x="1" y="2" width="106" height="59" uuid="6d14e5f3-9e00-42bc-b444-2d3955f69811"/>
+				<textElement textAlignment="Left" verticalAlignment="Bottom">
+					<font size="9" isBold="false" isStrikeThrough="false" pdfFontName="Helvetica-Bold" isPdfEmbedded="true"/>
 				</textElement>
-				<text><![CDATA[1]]></text>
+				<text><![CDATA[Chief Accounts Officer,
+Municipal Corporation,
+Chandigarh]]></text>
+			</staticText>
+			<staticText>
+				<reportElement positionType="Float" x="365" y="67" width="100" height="13" uuid="f89cd956-ffcb-457e-ab74-ee012548cdd3"/>
+				<textElement>
+					<font size="9" pdfFontName="Helvetica"/>
+				</textElement>
+				<text><![CDATA[Dated :]]></text>
+			</staticText>
+			<staticText>
+				<reportElement positionType="Float" x="42" y="80" width="450" height="14" uuid="898b84ec-827d-4256-8265-bebb879d4f3b"/>
+				<textElement>
+					<font size="9" pdfFontName="Helvetica"/>
+				</textElement>
+				<text><![CDATA[Copy of the above is forwarded to the followiing for information & necessary action.]]></text>
+			</staticText>
+			<staticText>
+				<reportElement positionType="Float" x="7" y="66" width="100" height="14" uuid="e2698a70-cdef-4547-9090-9da335d2800b"/>
+				<textElement>
+					<font size="9" pdfFontName="Helvetica"/>
+				</textElement>
+				<text><![CDATA[Endest No : ]]></text>
+			</staticText>
+			<staticText>
+				<reportElement positionType="Float" x="409" y="190" width="96" height="59" uuid="2e46a29a-1044-4fbb-bbfe-5db08f09989b"/>
+				<textElement textAlignment="Left" verticalAlignment="Bottom">
+					<font size="9" isBold="false" isStrikeThrough="false" pdfFontName="Helvetica-Bold" isPdfEmbedded="true"/>
+				</textElement>
+				<text><![CDATA[Chief Accounts Officer,
+Municipal Corporation,
+Chandigarh]]></text>
+			</staticText>
+			<staticText>
+				<reportElement x="25" y="174" width="467" height="16" uuid="692271df-b34d-4323-91ba-0aee81079769"/>
+				<textElement>
+					<font size="9" pdfFontName="Helvetica"/>
+				</textElement>
+				<text><![CDATA[Copies of the bill deduction vouchers are attached herewith for depositing the statutory liabilities with the respective authorities.]]></text>
 			</staticText>
 		</band>
-	</title>
+	</pageFooter>
 </jasperReport>
